--- a/gibbons-1975/gibbons-main.tex
+++ b/gibbons-1975/gibbons-main.tex
@@ -66,6 +66,8 @@ The new version was typed out by Pete Su on November 18, 2024.
   \IfValueT{#2}{^{#2}}% possible superscript
 }
 
+\def\gradsubA{\grad_{\!A}}
+\def\gradsupA{\grad^{\!A}}
 
 \begin{document}
 
@@ -143,9 +145,9 @@ need not necessarily be future directed timelike. An incident wave carrying posi
 
 In our previous notation we find the $\phi$ can be written as $\phi = e^{iEt}e^{iL\phi}\chi$ and $\chi$ obeys
 \be
-{1 \over \sigma}(\grad_A \, \sigma \, \grad^A \chi) + {[(E \dt + L \dphi + eA)^2 - m^2]}\chi = 0
+{1 \over \sigma}(\gradsubA \, \sigma \, \gradsupA \chi) + {[(E \dt + L \dphi + eA)^2 - m^2]}\chi = 0
 \ee
-where $\grad_A$ denotes covariant differentiation in the $r, \theta$ plane. The conserved flux is
+where $\gradsubA$ denotes covariant differentiation in the $r, \theta$ plane. The conserved flux is
 \be
 J = (E\dt + L\dphi + A) |\chi|^2 + {(\bar\chi d\chi - \chi d\bar\chi) \over 2i}
 \ee
