--- a/BH-penrose/BH2.tex
+++ b/BH-penrose/BH2.tex
@@ -134,15 +134,15 @@ tall for convenience. That's why $i^0$ seems like it's in the wrong place.
     	
     \node[above right] at (E) {\small $\iz$};
     \node[above] at (NE) {\small $\ip$};
-    \node[below] at (SE) {\small $\im$};
+    \node[below] at (S) {\small $\im$};
     \node[rotate=90] at (-.06,0) {\small$r=0$};
     \node[above right] at (1,.5) {\small$\scri^+$};
     \node[below right] at (.8,-.15) {\small$\scri^-$};
     \node[above, rotate=45] at (0.4,.4) {\small ${\H}^+$};
 
     % Coordinates
-    \node[below, rotate=45] at (0.3,0.3) {\small $u = \infty$};
-    \node[above, rotate=45] at (0.8,-0.2) {\small $u = -\infty$};
+    \node[below, rotate=45] at (0.4,0.4) {\small $u = \infty$};
+    \node[above, rotate=45] at (0.86,-0.15) {\small $u = -\infty$};
     
     \node[above, rotate=-45] at (0.25,0.-0.25) {\small $v = v_0$};
     \node[below, rotate=-45] at (1,.5) {\small $v = \infty$};
