--- a/1409.1231v5/jerusalemarxivv5.tex
+++ b/1409.1231v5/jerusalemarxivv5.tex
@@ -580,7 +580,7 @@ To understand which modes are important, we clearly need some sort of prescripti
 
 
 \subsection{Hawking's calculation of black hole radiation}\label{hawkrad}
-Let's now focus on a black hole created from the collapse of a matter; the Penrose diagram is shown in figure \ref{collapse2}.
+Let's now focus on a black hole created from the collapse of a photon shell; the Penrose diagram is shown in figure \ref{collapse2}.
 \begin{figure}
 \begin{center}
 \includegraphics[height=5cm]{collapse2.pdf}
