--- a/BH-penrose/BH2.tex
+++ b/BH-penrose/BH2.tex
@@ -173,16 +173,67 @@ radius of the start is $0$.
 \item The blue line is the star collapsing and forming the black hole.
 \item The coordinate system $(u,v)$ moves along the null rays (45 degree lines). The event
 horizon of the black hole is that $u=\infty$, and the future of everything is that $v=\infty$.
-\item The line at $v=v_0$  passes through the star and forms the
-event horizon. Thus any ray with $v > v_0$ falls into the black hole, and $v < v_0$ escpes. 
-We can think of $v_0$ as the $0$ point in the $v$ direction.
 \end{itemize}
 \newpage
 \noindent
-The next diagram shows the thought experiment used to calculate the rate of Hawking radiation
-out of the black hole. In his paper Hawking traces wave packets, or ``modes`` back in time
-that reach $\scri^+$ back in time and observes that they will be made up of two components: a
-piece that reflects off the collapsing shell and back to $\scri^-$ and another piece that travels
-through the shell to where the event horizon forms, and then back to $\scri^-$.
+Note that the ray at $v=v_0$  represents the last ray that passes through the star and reaches $\scri^+$.
+Thus any ray with $v > v_0$ falls through the event horizon and into the black hole. Any ray at $v < v_0$
+escapes. We can think of $v_0$ as the $0$ point in the $v$ direction.
+
+The next diagram shows these two types of rays in more detail.
+
+\begin{center}
+\begin{tikzpicture}[scale=5]
+        
+    % BOUNDING DIAGRAM
+    \coordinate (O) at ( 0, 0); % center: origin (r,t) = (0,0)
+    \coordinate (S) at ( 0,-1); % south: t=-infty, i-
+    \coordinate (N) at ( 0.5, 1); % north: t=+infty, i+
+    \coordinate (E) at ( 1.25, 0.25); % east:  r=+infty, i0
+    \coordinate (NE) at ( .75, .75); 
+    \coordinate (SM) at ( .5, -.5);
+    \coordinate (NM) at ( 1, .5);
+    \coordinate (mid) at (.5,.5);
+    \draw[thick] (E) -- (NE);
+    \draw[thick] (S) -- (E);
+    \draw[dashed] (S) -- (0,.75);
+    \draw[thick] (NE) -- (O);
+	\draw[thick] (SM) -- (O);
+    % LABELS
+    	
+    \node[above right] at (E) {\small $\iz$};
+    \node[above] at (.79,.75) {\small $\ip$};
+    \node[below] at (S) {\small $\im$};
+    \node[rotate=90] at (-.06,0) {\small$r=0$};
+    \node[above right] at (1,.5) {\small$\scri^+$};
+    \node[below right] at (.8,-.15) {\small$\scri^-$};
+    \node[above, rotate=45] at (0.4,.4) {\small ${\H}^+$};
+
+    % singularity
+  	\draw[thick, decorate,decoration={zigzag,aspect=0,amplitude=2.3pt,segment length=3.5pt}] (0,0.75) -- (NE);
+
+    % Collapsing shell
+    \path [draw=blue] (S) .. controls (.2,0) .. (.01,.75);
+    
+    % Text labels
+    \coordinate (SI) at (.6,.82);
+    \node[anchor=east] at (SI) {\footnotesize Singularity};
+
+	% radiation path
+	\draw[red] (.47,-.52) -- (0,-.05) -- (.77,.725);
+	\node[below, rotate=-45] at (0.3,-0.33) {\small $v < v_0$};
+
+    \node[above, rotate=-45] at (0.25,0.-0.25) {\small $v = v_0$};
+
+	\draw[red] (1,0) -- (.26,.74);
+    \node[above, rotate=-45] at (0.8,0.2) {\small $v > v_0$};
+
+\end{tikzpicture}
+\end{center}
+\noindent
+Hawking's original paper observed that the Hawking radiation occurs because while 
+the vacuum states of the fields are empty near $\scri^-$ these same states will contain
+particles when observed at  $\scri^+$. To work out how many such particles appear at $\scri^+$
+Hawking traces a wave packet from $\scri^+$ back through the shell to $\scri^-$.
 
 \end{document}
