--- a/BH-penrose/BH2.tex
+++ b/BH-penrose/BH2.tex
@@ -218,7 +218,7 @@ The next diagram shows these two types of rays in more detail.
     
     % Text labels
     \coordinate (SI) at (.6,.82);
-    \node[anchor=east] at (SI) {\footnotesize Singularity};
+    %\node[anchor=east] at (SI) {\footnotesize Singularity};
 
 	% radiation path
 	\draw[red] (.47,-.52) -- (0,-.05) -- (.77,.725);
@@ -234,9 +234,10 @@ The next diagram shows these two types of rays in more detail.
 \newpage
 \noindent
 Hawking's original paper observed that black holes appear to radiate because while
-the vacuum states of the fields are empty near $\scri^-$ these same states will contain
-particles when observed at  $\scri^+$ because of effects related to the curvature of
-spacetime. The details of the calculation trace wave packets from $\scri^+$ back to $\scri^-$ 
+the vacuum states of the fields appear to be empty near $\scri^-$ these same states
+will appear to ``contain'' particles when observed at  $\scri^+$ because of effects 
+related to the curvature of spacetime. The details of the calculation trace
+wave packets from $\scri^+$ back to $\scri^-$ 
 through the shell and show that what the an observer sees on $\scri^+$ will look
 like an extremely cold thermal bath.
 
