--- a/BH-penrose/BH2.tex
+++ b/BH-penrose/BH2.tex
@@ -290,4 +290,51 @@ Our final diagram shows this process:
 \end{tikzpicture}
 \end{center}
 
+\newpage
+\noindent
+A more minimal one without the coordinates:
+
+\begin{center}
+\begin{tikzpicture}[scale=5]
+        
+    % BOUNDING DIAGRAM
+    \coordinate (O) at ( 0, 0); % center: origin (r,t) = (0,0)
+    \coordinate (S) at ( 0,-1); % south: t=-infty, i-
+    \coordinate (N) at ( 0.5, 1); % north: t=+infty, i+
+    \coordinate (E) at ( 1.25, 0.25); % east:  r=+infty, i0
+    \coordinate (NE) at ( .75, .75); 
+    \coordinate (SM) at ( .5, -.5);
+    \coordinate (NM) at ( 1, .5);
+    \coordinate (mid) at (.5,.5);
+    \draw[thick] (E) -- (NE);
+    \draw[thick] (S) -- (E);
+    \draw[dashed] (S) -- (0,.75);
+    \draw[thick] (NE) -- (O);
+	\draw[thick] (SM) -- (O);
+    % LABELS
+    	
+    \node[above right] at (E) {\small $\iz$};
+    \node[above] at (.79,.75) {\small $\ip$};
+    \node[below] at (S) {\small $\im$};
+    \node[rotate=90] at (-.06,0) {\small$r=0$};
+    \node[above right] at (1,.5) {\small$\scri^+$};
+    \node[below right] at (.8,-.15) {\small$\scri^-$};
+    \node[below, rotate=45] at (0.4,.4) {\small ${\H}^+$};
+    %\node[below, rotate=45] at (0.4,.4) {\small Event Horizon};
+
+        
+    % singularity
+  	\draw[thick, decorate,decoration={zigzag,aspect=0,amplitude=2.3pt,segment length=3.5pt}] (0,0.75) -- (NE);
+
+    % Collapsing shell
+    \path [draw=blue] (S) .. controls (.2,0) .. (.01,.75);
+    
+    % Text labels
+    \coordinate (SI) at (.6,.82);
+    \node[anchor=east] at (SI) {\footnotesize Singularity};
+
+
+\end{tikzpicture}
+\end{center}
+
 \end{document}
