--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-12-01 07:30:44 -0500 
+%% Created for Pete Su at 2024-12-06 08:53:05 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ong2024,
+	author = {Yen Chin Ong},
+	date-added = {2024-12-06 08:52:59 -0500},
+	date-modified = {2024-12-06 08:53:05 -0500},
+	journal = {arXiv preprint},
+	note = {\href{http://arxiv.org/abs/2412.00322v1}{arxiv:2412.00322}},
+	title = {{The Case For Black Hole Remnants: A Review}},
+	year = {2024}}
 
 @article{Starobinskii1973,
 	author = {Starobinskii, AA and Churilov, SM},
