--- a/1412.8366/RemnantPublishedVer.tex
+++ b/1412.8366/RemnantPublishedVer.tex
@@ -1,8 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage{sectsty}
-\allsectionsfont{\sffamily}
-\textheight = 24truecm \textwidth = 16truecm \hoffset = -1.3truecm
-\voffset = -2truecm
+
 \newcommand{\qed}{\hfill \ensuremath{\Box}}
 \newcommand{\bbr}{I\!\! R}
 \newcommand{\bbz}{Z\!\!\! Z}
@@ -36,6 +34,53 @@
 \usepackage{url}
 \usepackage{xcolor}
 \usepackage{color}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 %The following defines colors for hyperlinks.
 \definecolor{amaranth}{rgb}{0.9, 0.17, 0.31}
 \definecolor{purple(munsell)}{rgb}{0.62, 0.0, 0.77}
@@ -46,10 +91,7 @@
 \definecolor{beaublue}{rgb}{0.74, 0.83, 0.9}
 \definecolor{carminered}{rgb}{1.0, 0.0, 0.22}
 \definecolor{brightpink}{rgb}{1.0, 0.0, 0.5}
-\hypersetup{ linktoc=all,
-    colorlinks, linkcolor={palatinateblue},
-    citecolor={brightpink}, urlcolor={purple(munsell)}
-}
+
 
 %%%%%sideremarks
 \def\sideremark#1{\ifvmode\leavevmode\fi\vadjust{\vbox to0pt{\vss% the remark
@@ -79,31 +121,31 @@
 
 \null \vskip-1truecm \vskip2truecm
 
-{\Large{\bf \textsf{Black Hole Remnants and the Information Loss Paradox}}}
+{\Large{\bf {Black Hole Remnants and the Information Loss Paradox}}}
 
 
 \vskip1truecm
-\textbf{\textsf{Pisin Chen}}
-{\small \textsf{\\(1) Leung Center for Cosmology and Particle Astrophysics \& \\ Graduate Institute of Astrophysics \& Department of Physics,\\  National Taiwan University,
+\textbf{{Pisin Chen}}
+{\small {\\(1) Leung Center for Cosmology and Particle Astrophysics \& \\ Graduate Institute of Astrophysics \& Department of Physics,\\  National Taiwan University,
 Taipei 10617, Taiwan\\ (2) Kavli Institute for Particle Astrophysics and Cosmology, \\SLAC National Accelerator Laboratory, Stanford University, CA 94305, U.S.A}\\
 \tt{Email: pisinchen@phys.ntu.edu.tw}}\\
 
 \vskip0.4truecm
-\textbf{\textsf{Yen Chin Ong}}\\
-{\small \textsf{Nordita, KTH Royal Institute of Technology and Stockholm University, \\ Roslagstullsbacken 23,
+\textbf{{Yen Chin Ong}}\\
+{\small {Nordita, KTH Royal Institute of Technology and Stockholm University, \\ Roslagstullsbacken 23,
 SE-106 91 Stockholm, Sweden}\\
 \tt{Email: yenchin.ong@nordita.org}}\\
 
 \vskip0.4truecm
-\textbf{\textsf{Dong-han Yeom}}\\
-{\small \textsf{Leung Center for Cosmology and Particle Astrophysics,\\ National Taiwan University,
+\textbf{{Dong-han Yeom}}\\
+{\small {Leung Center for Cosmology and Particle Astrophysics,\\ National Taiwan University,
 Taipei 10617, Taiwan}\\
 \tt{Email: innocent.yeom@gmail.com}}\\
 
 
 
 \end{center}
-\vskip1truecm \centerline{\textsf{ABSTRACT}} \baselineskip=15pt
+\vskip1truecm \centerline{{ABSTRACT}} \baselineskip=15pt
 
 \medskip
 Forty years after the discovery of Hawking radiation, its exact nature remains elusive. If Hawking radiation does not carry any information out from the ever shrinking black hole, it seems that unitarity is violated once the black hole completely evaporates. On the other hand, attempts to recover information via quantum entanglement lead to the firewall controversy. Amid the confusions, the possibility that black hole evaporation stops with a ``remnant'' has remained unpopular and is often dismissed due to some ``undesired properties'' of such an object. Nevertheless, as in any scientific debate, the pros and cons of any proposal must be carefully scrutinized. We fill in the void of the literature by providing a timely review of various types of black hole remnants, and provide some new thoughts regarding the challenges that black hole remnants face in the context of the information loss paradox and its latest incarnation, namely the firewall controversy. The importance of understanding the role of curvature singularity is also emphasized, after all there remains a possibility that the singularity cannot be cured even by quantum gravity. In this context a black hole remnant conveniently serves as a cosmic censor.  
@@ -1240,6 +1282,7 @@ where $g_{\tau\tau}=-g_{tt}$, with $t$ Wick-rotated; and $L$ is the AdS length s
 The Seiberg-Witten instability is a non-perturbative instability that occurs due to an uncontrolled brane productions \cite{kn:seiberg, KPR}. Indeed, brane-anti-brane pairs are always spontaneously produced from the AdS vacuum. This phenomenon is analogous to the well-known Schwinger effect in quantum electrodynamics, with the rate of brane-anti-brane pair production being proportional to $\exp(-\mathcal{S})$, where $\mathcal{S}$ is the Seiberg-Witten brane action. If the brane action becomes negative, the AdS vacuum will nucleate brane-anti-brane pairs at an exponentially large rate [instead of being exponentially suppressed].  
 
 \begin{thebibliography}{400}
+\raggedright
 
 \bibitem{Hawking1}
 Stephen Hawking, ``Black Hole Explosions?'', Nature \textbf{248} (1974) 30.
